tests/baselines/reference/augmentedTypesModules3.errors.txt
==== tests/cases/compiler/augmentedTypesModules3.ts (1 errors) ====
    //// module then class
    module m3 { }
    class m3 { } // ok since the module is not instantiated
    
    module m3a { var y = 2; }
    class m3a { foo() { } } // error, class isn't ambient or declared before the module
          ~~~
!!! augmentedTypesModules3.ts(6,7): error TS2000: Duplicate identifier 'm3a'. Additional locations:
!!! 	augmentedTypesModules3.ts(5,8)